InternexDev_Sandbox/src/objects/Linked_Account__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>akritiv__Brand__c</referenceTo>
        <relationshipLabel>Linked Accounts</relationshipLabel>
        <relationshipName>Linked_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Encryption_Key__c</fullName>
        <label>Encryption Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedAccountTypeName__c</fullName>
        <formula>UPPER(Linked_Account_Type__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedAccountTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Account_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Linked Account Type</label>
        <referenceTo>Linked_Account_Type__c</referenceTo>
        <relationshipLabel>Linked Accounts</relationshipLabel>
        <relationshipName>Linked_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>access_token_secret__c</fullName>
        <label>Access Token Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>consumer_key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>consumer_secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_token__c</fullName>
        <label>Oauth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>realm__c</fullName>
        <label>Realm ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Linked Account</label>
    <nameField>
        <displayFormat>LAN-{00000}</displayFormat>
        <label>Linked Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>